	(PokerRendererTests.test21_handleLobbyUnknownAction): Wrote method.
	(PokerRendererTests.test22_currencySerial2NameNotString): Wrote method.
	(PokerRendererTests.test24_handleHandsUnknownActoin): Wrote test.
	(PokerRendererTests.test26_handleHandsReplayHand): Wrote test.
	(PokerRendererTests.test25_handleHandsOutOfState): Wrote test.
	(PokerRendererTests.test27_rotateTableWithTwo): Wrote method.

	* pokerui/pokerrenderer.py (PokerRenderer._handleConnection):
	error message for bad outfit should print outfits, not urls.

	* tests/test-pokerrenderer.py.in
	(PokerRendererTests.test13_packetPlayerArriveInHandleConnection):
	Wrote method.
	(PokerRendererTests.MockPokerFactory.getUrl): Wrote method.
	(PokerRendererTests.MockPokerFactory.getOutfit): Wrote method.
	(PokerRendererTests.MockDisplay): Made a generalized mockup for
	all tests.
	(PokerRendererTests.MockPokerFactory.getSkin): Wrote method.
	(PokerRendererTests.MockGame.isTournament): Wrote method.
	(PokerRendererTests.MockPlayer.__init__): Wrote method.

2008-07-13  Loic Dachary <loic@dachary.org>

	* Release 1.7.0

	* tests/Makefile.am: add test-pokerauth/pokerauth.py to the
	  distribution
	* pokernetwork/pokerpackets.py, pokernetwork/pokerservice.py,
	  tests/test-pokerservice.py.in: MySQLdb python module return the
	  date field (birthdate) as a date object instead of the expected
	  string. It is converted to string for serialization in the
	  packets.
	* conf/poker.bot.xml.in, conf/poker.client.xml.in,
	  conf/poker.server.xml.in, examples/poker.bot.xml,
	  examples/poker.server-monotone.xml, examples/poker.server.xml,
	  pokerclient2d/poker2d.xml.in, tests/conf/poker.client.xml.in:
	  update version fields to 1.7.0

2008-07-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerrenderer.py.in
	(PokerRendererTests.test11_handleSerial): Wrote test.
	(PokerRendererTests.test12_handleConnectionBadStates): Wrote test.

2008-07-12  Loic Dachary <loic@dachary.org>
